Integrated ad mob and three type of ads

--- a/android/app/src/prod/res/values/strings.xml
+++ b/android/app/src/prod/res/values/strings.xml
@@ -3,4 +3,5 @@
    <string name="app_name">FlutterPresetup</string>
    <string name="facebook_app_id">facebook-app-id-prod</string>
    <string name="facebook_client_token">facebook-app-token-prod</string>
+   <string name="admob_id">admob-android-id-prod</string>
 </resources>
