--- a/android/app/src/dev/res/values/strings.xml
+++ b/android/app/src/dev/res/values/strings.xml
@@ -3,4 +3,5 @@
    <string name="app_name">[dev] FlutterPresetup</string>
    <string name="facebook_app_id">facebook-app-id-dev</string>
    <string name="facebook_client_token">facebook-app-token-dev</string>
+   <string name="admob_id">admob-android-id-dev</string>
 </resources>
